Minor Bug Fixes